syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (User) returns (UserResponse);
  rpc GetUser (UserId) returns (UserResponse);
  rpc UpdateUser (User) returns (UserResponse);
  rpc DeleteUser (UserId) returns (DeleteResponse);
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UserId {
  int32 id = 1;
}

message UserResponse {
  User user = 1;
}

message DeleteResponse {
  string message = 1;
}